--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,7 @@ ja:
           has_many: "%{record}が存在しているので削除できません"
     models:
       book: 書籍
+      user: ユーザー
     attributes:
       book:
         id: ID
@@ -18,6 +19,16 @@ ja:
         picture: 写真
         created_at: 登録日時
         updated_at: 更新日時
+      user:
+        name: 名前
+        postcode: 郵便番号
+        email: email
+        address: 住所
+        introduction: 自己紹介
+        password: パスワード
+        password_confirmation: パスワードの確認
+        current_password: 現在のパスワード
+
   date:
     abbr_day_names:
     - 日
@@ -223,10 +234,11 @@ ja:
     destroy: 削除
     new_book: 新規登録
     back: 戻る
+    update: 更新
   success:
       book_was_successfully_created: 書籍情報の登録に成功しました
       book_was_successfully_destroyed: 書籍情報の削除に成功しました
       book_was_successfully_updated: 書籍情報の編集に成功しました
   confirm:
-    are_you_sure: 本当に行いますか？
+    are_you_sure: 本当によろしいですか？
 
